--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,7 +53,7 @@ label {
         padding-left: 10px;
     }
 
-    #getArea {
+    #getTruthyValues {
         width: 250px;
         height: 42px;
         background: red;
